# wise

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  app.py  cost.py  main.py  pyproject.toml  requirements.txt  script.sh
.github/: dependabot.yml
.github/workflows/: bump-version.yml  cron.yaml  cron.yml  lint.yml  publish.yml  python.yaml  python.yml  tag.yaml  tag.yml  test.yml
scripts/: add_usd.py  available_currencies.py  rate_history.py  same_currency.py
src/wise/: __init__.py  cli.py  cost.py  currency.py
src/wisest/: cli.py  cost.py  currency.py  method.py  price.py  rate.py  rate_limit.py
templates/: index.html
tests/: test_cost.py  test_currency.py  test_price.py  test_print.py  test_rate.py  test_visa.py
wise/: __init__.py  cli.py  cost.py  currency.py  db.py  mile_cost.py  payment.py  price.py  rate.py  request.py  slack.py  slack_bot.py  telegram.py  utils.py  visa.py  visa_cost.py  visa_rate.py  wise_rate.py  yf_rate.py  yrate.py
