[project]
name = "wisest"
version = "0.14.1"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "tqdm>=4.66.5",
    "typer>=0.15.2",
]

[project.scripts]
wise = "wisest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.12.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "types-pygments>=2.18.0.20240506",
    "types-colorama>=0.4.15.20240311",
    "types-setuptools>=75.2.0.20241019",
    "types-tabulate>=0.9.0.20240106",
    "types-tqdm>=4.66.0.20240417",
    "pytest-asyncio>=0.26.0",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle Error
    "EM",  # flake8-errmsg
    "F",   # Pyflakes
    "FA",  # flake8-future-annotations
    "I",   # isort
    "N",   # pep8-naming
    "NPY", # NumPy-specific rules
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TRY", # raise-vanilla-args
    "UP",  # pyupgrade
    "W",   # pycodestyle Warning
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test_*.py" = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.bumpversion]
current_version = "0.14.1"
tag = true
commit = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]
