[project]
name            = "wisest"
version         = "0.15.2"
description     = ""
readme          = "README.md"
requires-python = ">=3.11"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "aiolimiter>=1.2.1",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "rich>=13.9.4",
  "tabulate>=0.9.0",
  "typer>=0.15.2",
]

[project.scripts]
wise = "wise.cli:main"

[dependency-groups]
dev = [
  "prek>=0.3.1",
  "pytest>=8.3.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "tombi>=0.7.25",
  "ty>=0.0.14",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.15.2"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["src/wise"]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ANN",     # flake8-annotations
  "ASYNC",   # flake8-async
  "B",       # flake8-bugbear
  "C",       # flake8-comprehensions
  "DTZ",     # flake8-datetimez
  "E",       # pycodestyle errors
  "F",       # pyflakes
  "FURB",    # refurb
  "I",       # isort
  "G",       # flake8-logging-format
  "N",       # pep8-naming
  "PERF",    # perflint
  "PIE",     # flake8-pie
  "PTH",     # flake8-use-pathlib
  "RET",     # flake8-return
  "RSE",     # flake8-raise
  "RUF",     # ruff-specific rules
  "SIM",     # flake8-simplify
  "TID",     # flake8-tidy-imports
  "TRY002",  # raise-vanilla-class
  "TRY004",  # type-check-without-type-error
  "TRY203",  # useless-try-except
  "TRY300",  # try-consider-else
  "UP",      # pyupgrade
  "W",       # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test_*.py"   = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
